--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,25 @@
 body {
-    font-family: "Pixelify Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
-    color: aliceblue;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  height: 100VH;
+  font-family: "Pixelify Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+  color: aliceblue;
   }
   
   .grid {
     width: 400px;
     height: 600px;
+    margin-top: 50px;
     background-image: url(/img/background-3.png);
     position: relative;
     font-size: 30px;
     text-align: center;
+    overflow: hidden;
   }
   
   .player {
