--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body {
     width: 400px;
     height: 600px;
     margin-top: 50px;
-    background-image: url(img/background-3.png);
+    background-image: url(../img/background-3.png);
     position: relative;
     font-size: 30px;
     text-align: center;
@@ -32,7 +32,7 @@ body {
   .brick {
     width: 80px; /*80*/
     height: 15px; /*CAMBIAR TO 15*/
-    background-image: url(img/bricks-1-01.png);
+    background-image: url(../img/bricks-1-01.png);
     background-size: cover;
     position: absolute;
   }
