--- a/css/intro.css
+++ b/css/intro.css
@@ -15,7 +15,7 @@ body {
       width: 400px;
       height: 600px;
       margin-top: 50px;
-      background-image: url(img/background-2.png);
+      background-image: url(../img/background-2.png);
       position: relative;
       font-size: 30px;
       text-align: center;
