Score summatory updated to the collision function + sound Effect added to the jump function

--- a/css/main.css
+++ b/css/main.css
@@ -3,36 +3,44 @@ body {
   padding: 0;
   display: flex;
   justify-content: center;
-  height: 100VH;
+  height: 100vh;
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
   color: aliceblue;
-  }
-  
-  .grid {
-    width: 400px;
-    height: 600px;
-    margin-top: 50px;
-    background-image: url(../img/background-3.png);
-    position: relative;
-    font-size: 30px;
-    text-align: center;
-    overflow: hidden;
-  }
-  
-  .player {
-    width: 50px; 
-    height: 50px; 
-    background-size: cover;
-    position: absolute;
-  }
-  
-  .brick {
-    width: 80px; /*80*/
-    height: 15px; /*CAMBIAR TO 15*/
-    background-image: url(../img/bricks-1-01.png);
-    background-size: cover;
-    position: absolute;
-  }
+}
+
+.grid {
+  width: 500px; /*400*/
+  height: 600px;
+  margin-top: 60px;
+  background-image: url(../img/background-3.png);
+  position: relative;
+  font-size: 30px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.player {
+  background-size: cover;
+  position: absolute;
+}
+
+.brick {
+  width: 80px; /*Change to 80*/
+  height: 15px; /*change to 15*/
+  background-image: url(../img/bricks-1-01.png);
+  background-size: cover;
+  position: absolute;
+}
+
+#score-container {
+  width: 100px;
+  height: 20px; /*change to 15*/
+  margin: 20px;
+  font-size: 20px;
+  background-color: rgb(255, 0, 242);
+  border: 1px solid white;
+  position: absolute;
+}
